--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 
 <!-- Mirrored from fullsendnft.live/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Jan 2022 05:23:00 GMT -->
 <head>
-	<title></title>
+	<title>FULL SEND METACARD</title>
+  <meta name="description" content="Mint your FULL SEND METACARD."/>
+  <link rel="icon" href="favicon.ico"/>
 </head>
 <body></body>
 
 <!-- Mirrored from fullsendnft.live/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Jan 2022 05:23:00 GMT -->
 </html>
-<title></title>
+<title>FULL SEND METACARD</title>
+<meta name="description" content="Mint your FULL SEND METACARD."/>
+<link rel="icon" href="favicon.ico"/>
 <link href="favicon.html" rel="shortcut icon" type="image/jpg" />
 <link href="styles.css" rel="stylesheet" />
 <script src="cdnjs.cloudflare.com/ajax/libs/web3/1.5.3-rc.0/web3.min.js"></script>
